設計書完成

--- a/設計書.md
+++ b/設計書.md
@@ -1,17 +1,148 @@
 # API設計書
 
 ## Todo
-商品データの登録・検索・変更・削除を行うAPI  
+
+商品データの登録・検索・変更・削除を行うAPI
+
 * 商品画像
-* 商品タイトル(最大100文字)
-* 説明文(最大500文字)
-* 価格  
+* 商品タイトル（最大100文字）
+* 説明文（最大500文字）
+* 価格
 
-## f
-### request /products
-#### @GET 
+## Request
+
+### @GET /api/products
+
 商品の検索
+
+#### parameters
+
+パラメータがない場合は商品リストを返却
+
+| name      | Required | Description       |
+| :-------- | :------- | :---------------- |
+| name      | No       | product name      |
+| min_price | No       | Min product price |
+| max_price | No       | Max product price |
+
+#### Response
+
+```json
+{  
+  "success": "'success' or 'failure'",
+  "message": "'success' or 'error_message'",
+  "details": [
+    {
+      "id": "product_id",
+      "name": "product_name",
+      "description": "product_description",
+      "image": "product_imgfile_binary",
+      "price": "product_price"
+    }
+  ],
+  "details_url": "https://example.jp/response"
+}
 ```
 
+### @POST /api/products
 
+商品の登録
+
+#### parameters
+
+| name        | Required | Description            |
+| :---------- | :------- | :--------------------- |
+| name        | Yes      | product name           |
+| description | Yes      | product description    |
+| image       | Yes      | product imgfile binary |
+| price       | Yes      | product price          |
+
+##### example
+
+```json
+{
+  "name": "メチャスゴイオカネ",
+  "description": "なんでも10円で買えてしまう画期的なおかね．22世紀より輸入．",
+  "image": "file=@/10price_money.png",
+  "price": "1000"
+}
 ```
+
+#### Response
+
+```json
+{
+  "success": "'success' or 'failure'",
+  "message": "'success' or 'error_message'",
+  "details_url": "https://example.jp/response"
+}
+```
+
+### @PUT /api/products/:product_id
+
+商品の変更（update）
+
+#### parameters
+
+```json
+{
+  "name": "product_name",
+  "description": "product_description",
+  "image": "product_imgfile_binary",
+  "price": "product_price"
+}
+```
+
+#### Response
+
+```json
+{
+  "success": "'success' or 'failure'",
+  "message": "'success' or 'error_message'",
+  "details_url": "https://example.jp/response"
+}
+```
+
+### @DELETE /api/products/:product_id
+
+商品の削除（delete）
+
+#### Response
+
+```json
+{
+  "success": "'success' or 'failure'",
+  "message": "'success' or 'error_message'",
+  "details_url": "https://example.jp/response"
+}
+```
+
+### @GET /api/products/:id
+
+idの商品を取得
+
+#### Response
+
+```json
+{
+  "success": "'success' or 'failure'",
+  "message": "'success' or 'error_message'",
+  "details": [
+    {
+      "id": "product_id",
+      "name": "product_name",
+      "description": "product_description",
+      "image": "product_imgfile_binary",
+      "price": "product_price"
+    }
+  ],
+  "details_url": "https://example.jp/response"
+}
+```
+
+### Response code
+
+| code  | status  | description |
+| :---- | :------ | :---------- |
+| 10000 | success | success     |
+| 20000 | failure | Not Found   |
