仕様変更 画像の取扱をバイナリからbase64に変更

--- a/設計書.md
+++ b/設計書.md
@@ -36,7 +36,7 @@
       "id": "product_id",
       "name": "product_name",
       "description": "product_description",
-      "image": "product_imgfile_binary",
+      "image": "product_imgfile_path",
       "price": "product_price"
     }
   ],
@@ -54,7 +54,7 @@
 | :---------- | :------- | :--------------------- |
 | name        | Yes      | product name           |
 | description | Yes      | product description    |
-| image       | Yes      | product imgfile binary |
+| image       | Yes      | product imgfile base64 |
 | price       | Yes      | product price          |
 
 ##### example
@@ -63,7 +63,7 @@
 {
   "name": "メチャスゴイオカネ",
   "description": "なんでも10円で買えてしまう画期的なおかね．22世紀より輸入．",
-  "image": "file=@/10price_money.png",
+  "image": "data:image/jpeg;base64,/9j/4AAQSk...",
   "price": "1000"
 }
 ```
@@ -88,7 +88,7 @@
 {
   "name": "product_name",
   "description": "product_description",
-  "image": "product_imgfile_binary",
+  "image": "product_imgfile_base64",
   "price": "product_price"
 }
 ```
@@ -132,7 +132,7 @@ idの商品を取得
       "id": "product_id",
       "name": "product_name",
       "description": "product_description",
-      "image": "product_imgfile_binary",
+      "image": "product_imgfile_path",
       "price": "product_price"
     }
   ],
